# statediff-RECUP

./: .gitignore  CMakeLists.txt  LICENSE  bootstrap.sh  setup.py  spack.yaml
.github/workflows/: ci.yml
python/: CMakeLists.txt  __init__.py
scripts/: build.sh  setup_env.sh
tests/statediff/: CMakeLists.txt
